[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mp4analyser"
version = "0.0.1"
authors = [
  { name="essential61", email="steven.hentschel@gmail.com" },
]
description = "mp4 file analyser written in Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/essential61/mp4analyser"
"Bug Tracker" = "https://github.com/essential61/mp4analyser/issues"
